Update TerminologyCTL.java